@@ -38,6 +38,9 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11333. Fix deadlock in DomainSocketWatcher when the notification pipe
     is full. (zhaoyunjiong via cmccabe)
 
+    HADOOP-11710. Make CryptoOutputStream behave like DFSOutputStream wrt
+    synchronization. (Sean Busbey via yliu)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
